2013-08-05  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/CgalToolbox/CgalAlphaShape3.cpp: (0.1.0)
	* Add matlab/CgalToolbox/cgal_alpha_shape3.m: (0.1.0)
	* Add matlab/test/test_cgal_alpha_shape3.m: (0.1.0)
	* matlab/CgalToolbox/CMakeLists.txt: (0.2.9)

	- CGAL_ALPHA_SHAPE3  Alpha-shape of a 3D set of points.

	* matlab/VectorWrapper.h: (0.5.3)

	- Fix bug, the VectorValueType for the partial specialization of
	K=CGAL::Exact_predicates_exact_constructions_kernel should have
	been K, not double.

	- Add partial specialization for
	CGAL::Exact_predicates_inexact_constructions_kernel.

	* matlab/CgalToolbox/CgalCheckSelfIntersect.cpp: (0.1.2)

	- Fix bug, the VectorValueType for the partial specialization of
	K=CGAL::Exact_predicates_exact_constructions_kernel should have
	been K, not double.

2013-07-30  Ramon Casero  <rcasero@gmail.com>

	* matlab/test/test_ventricles_phantom.m: (0.1.1)

	- Add section "create a mesh from the myocardium binary mask",
	that makes use of the third-party iso2mesh toolbox.

	* Delete matlab/test/test_check_sphtrisurf_vertices.m:

	- I had forgotten to delete the test script of function
	check_sphtrisurf_vertices() that was deleted yesterday.

2013-07-30  Christopher Kelly  <christopher.kelly28@gmail.com>

	* Add common.svnprops

	- SVN properties file which can be imported in the SVN properties window
	when adding MATLAB files to repository. This contains the Rev, Date and
	native properties, and will save us from the pain in the neck that would
	be having to add them by hand for every new file.

2013-07-30  Christopher Kelly  <christopher.kelly28@gmail.com>

	* Add matlab/CardiacToolbox/ventricles_phantom.m: (0.1.0)
	* Add matlab/test/test_ventricles_phantom.m: (0.1.0)

	- VENTRICLES_PHANTOM Create phantom image of simplified heart ventricles.

2013-07-30  Ramon Casero  <rcasero@gmail.com>

	* release 0.11.0

	- Fixed some issues with MEX functions failing on Windows because